--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Portfolio </title>
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css">
 
 
     </head>
@@ -29,6 +29,14 @@
 <button id = "start" onclick="start()">
     Start
 </button>
+
+<a id="title">
+ROCK PAPER SCISSORS 
+</a>
+
+<a id ="mania">
+    MANIA!
+</a>
 
 
 
