almost finished menu and started music - arcade 2

--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
 </button>
 
 <button id = "start" onclick="start()">
-    Start
+    START
 </button>
 
 <a id="title">
@@ -37,6 +37,18 @@ ROCK PAPER SCISSORS
 <a id ="mania">
     MANIA!
 </a>
+
+<button id = "store">
+    SHOP (COMING SOON)
+</button>
+
+<button id="credits">
+    CREDITS
+</button>
+
+<audio src="2024-05-22_-_Elevator_Dreamin_-_www.FesliyanStudios.com.mp3" controls autoplay loop>
+
+</audio>
 
 
 
