start button function - arcade session 3

--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
     SCISSORS
 </button>
 
-<button id = "start" onclick="start()">
+<button id = "start" onclick="start(), openstart()">
     START
 </button>
 
@@ -49,6 +49,10 @@ ROCK PAPER SCISSORS
 <audio src="2024-05-22_-_Elevator_Dreamin_-_www.FesliyanStudios.com.mp3" controls autoplay loop>
 
 </audio>
+
+<div id="tutorial">
+
+</div>
 
 
 
