screen turns black when start - arcade 3

--- a/main.html
+++ b/main.html
@@ -11,6 +11,12 @@
     </head>
 
     <body>
+
+
+
+<div id="mainmenu">
+
+<script src="divhandler.js"></script>
 <script src="rand.js"></script>
 
 
@@ -30,6 +36,10 @@
     START
 </button>
 
+
+
+
+
 <a id="title">
 ROCK PAPER SCISSORS 
 </a>
@@ -46,15 +56,15 @@ ROCK PAPER SCISSORS
     CREDITS
 </button>
 
-<audio src="2024-05-22_-_Elevator_Dreamin_-_www.FesliyanStudios.com.mp3" controls autoplay loop>
+
 
 </audio>
 
-<div id="tutorial">
-
 </div>
 
+<div id="tutorial">
 
+</div> 
 
 
     </body>
