added how to play screen - arcade session 4

--- a/main.html
+++ b/main.html
@@ -64,6 +64,25 @@ ROCK PAPER SCISSORS
 
 <div id="tutorial">
 
+    <a id="howto">
+        HOW TO PLAY
+    </a>
+
+    <a id="explain">
+        Choose to play either ROCK, PAPER or SCISSORS
+    </a>
+
+    <a id="explain2">
+        ROCK beats SCISSORS - SCISSORS BEATS PAPER - PAPER BEATS ROCK
+    </a>
+
+    <a id="explain3">
+        BEST OF 3 WINS 
+    </a>
+
+
+
+
 </div> 
 
 
