finished how to play started main game

--- a/main.html
+++ b/main.html
@@ -64,6 +64,8 @@ ROCK PAPER SCISSORS
 
 <div id="tutorial">
 
+    <div id="maintutorial">
+
     <a id="howto">
         HOW TO PLAY
     </a>
@@ -80,10 +82,26 @@ ROCK PAPER SCISSORS
         BEST OF 3 WINS 
     </a>
 
+    <button id="play" onclick="imready()">
+        IM READY!
+    </button>
 
+       </div>
+
+       
 
 
 </div> 
+
+<div id="game">
+
+        <img id="bot" src="imgs/Screenshot 2024-07-12 210125.jpg">
+
+        <a id="botname">
+            BOT
+        </a>
+        
+       </div>
 
 
     </body>
