added move set - arcade session 5

--- a/main.html
+++ b/main.html
@@ -20,25 +20,11 @@
 <script src="rand.js"></script>
 
 
-<button id = "rock" onclick="roc()">
-    ROCK
-</button>
 
-<button id = "paper" onclick="pap()">
-    PAPER
-</button>
-
-<button id = "scissors" onclick="sci()">
-    SCISSORS
-</button>
 
 <button id = "start" onclick="start(), openstart()">
     START
 </button>
-
-
-
-
 
 <a id="title">
 ROCK PAPER SCISSORS 
@@ -100,8 +86,26 @@ ROCK PAPER SCISSORS
         <a id="botname">
             BOT
         </a>
+
+        <a id="selecttitle">
+            CHOOSE YOUR MOVE
+        </a>
+
+        <button id="rockplayer">
+            ROCK
+        </button>
+
+        <button id="paperplayer">
+            PAPER
+        </button>
+
+        <button id="scissorplayer">
+           SCISSORS
+        </button>
+
         
-       </div>
+        
+</div>
 
 
     </body>
