cleaned up game code / bug fixed arcade session 5

--- a/main.html
+++ b/main.html
@@ -91,15 +91,15 @@ ROCK PAPER SCISSORS
             CHOOSE YOUR MOVE
         </a>
 
-        <button id="rockplayer">
+        <button id="rockplayer" onclick="roc()">
             ROCK
         </button>
 
-        <button id="paperplayer">
+        <button id="paperplayer" onclick="pap()">
             PAPER
         </button>
 
-        <button id="scissorplayer">
+        <button id="scissorplayer" onclick="sci()">
            SCISSORS
         </button>
 
