split game and menu, adding return, session 7

--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Portfolio </title>
+        <title> menu </title>
         <link rel="stylesheet" href="style.css">
 
 
@@ -21,10 +21,12 @@
 
 
 
-
-<button id="start" onclick=" openstart()">
+<a href="game.html">
+<button id="start">
     START
 </button>
+
+</a>
 
 <a id="title">
 ROCK PAPER SCISSORS 
@@ -48,67 +50,3 @@ ROCK PAPER SCISSORS
 
 </div>
 
-<div id="tutorial">
-
-    <div id="maintutorial">
-
-    <a id="howto">
-        HOW TO PLAY
-    </a>
-
-    <a id="explain">
-        Choose to play either ROCK, PAPER or SCISSORS
-    </a>
-
-    <a id="explain2">
-        ROCK beats SCISSORS - SCISSORS BEATS PAPER - PAPER BEATS ROCK
-    </a>
-
-    <a id="explain3">
-        BEST OF 3 WINS 
-    </a>
-
-    <button id="play" onclick="imready()">
-        IM READY!
-    </button>
-
-       </div>
-
-       
-
-
-</div> 
-
-<div id="game">
-
-        <img id="bot" src="imgs/Screenshot 2024-07-12 210125.jpg">
-
-        <a id="botname">
-            BOT
-        </a>
-
-        <a id="selecttitle">
-            CHOOSE YOUR MOVE
-        </a>
-
-        <button id="rockplayer" onclick="roc()">
-            ROCK
-        </button>
-
-        <button id="paperplayer" onclick="pap()">
-            PAPER
-        </button>
-
-        <button id="scissorplayer" onclick="sci()">
-           SCISSORS
-        </button>
-
-<a id="aiwin"> AI WINS</a>
-
-<a id="youwin"> YOU WIN</a>
-
-<p id="tie"> TIE </p>
-
-</div>
-
-    </body>
