added return / restart / fixed bugs session 7

--- a/main.html
+++ b/main.html
@@ -40,10 +40,11 @@ ROCK PAPER SCISSORS
     SHOP (COMING SOON)
 </button>
 
+<a href="https://github.com/presigues">
 <button id="credits">
     CREDITS
 </button>
-
+</a>
 
 
 </audio>
