added bot react when win/lose/tie session 7

--- a/game.html
+++ b/game.html
@@ -49,6 +49,9 @@
         <div id="game">
         
                 <img id="bot" src="imgs/Screenshot 2024-07-12 210125.jpg">
+                <img id="botwin" src="imgs/chillbot.jpg">
+                <img id="botlose" src="imgs/defeatedbot.jpg">
+                <img id="bottie" src="imgs/Screenshot 2024-07-12 222102.jpg">
         
                 <a id="botname">
                     BOT
