added audio code arcade session 8

--- a/main.html
+++ b/main.html
@@ -47,7 +47,18 @@ ROCK PAPER SCISSORS
 </a>
 
 
+<img id ="menubot" src="imgs/chillbot.jpg">
+<img id="menuplr" src="imgs/Screenshot 2024-07-13 000454.jpg">
+
+<iframe src="audio/2024-05-22_-_Elevator_Dreamin_-_www.FesliyanStudios.com.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+</iframe> 
+
+<audio autoplay loop  id="playAudio">
+    <source src="audio/2024-05-22_-_Elevator_Dreamin_-_www.FesliyanStudios.com.mp3">
 </audio>
+
+
+
 
 </div>
 
